[package]
name = "btree"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.11.1"
rand = "0.8.5"
parking_lot = { version = "0.12.3"}
crossbeam = "0.8.4"

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true

[[bench]]
name = "concurrent_write"
harness = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[features]
deadlock_detection = []
