[package]
name = "btree"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.11.1"
rand = "0.8.5"
crossbeam = "0.8.4"
gettid = "0.1.3"
tagptr = "0.2.0"
fxhash = "0.2"
usync = "0.2.1"


[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true

[[bench]]
name = "concurrent_write"
harness = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = true

[features]
deadlock_detection = []
extra_verbose_debug_logging = []