[package]
name = "btree"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.11.1"
rand = "0.9.0"
fxhash = "0.2"
usync = "0.2.1"
lock_api = "0.4.12"
rayon = "1.10.0"
shuttle = "0.8.0"
serde = "1.0"
serde_json = "1.0.87"
qsbr = { path = "../qsbr" }

[dev-dependencies]
criterion = "0.5.1"
btree-macros = { path = "../btree-macros" }


[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "concurrent_write"
harness = false

[[bench]]
name = "bulk_ops"
harness = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[features]
extra_verbose_debug_logging = []
shuttle = []
